--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "name": "pdfmake-node",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --exit-child src/server.ts"
+  },
+  "devDependencies": {
+    "@prisma/client": "^2.27.0",
+    "@types/express": "^4.17.13",
+    "@types/pdfmake": "^0.1.18",
+    "prisma": "^2.27.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "pdfmake": "^0.2.0"
+  }
 }
